#271 - ChatGPT text is better formated

--- a/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.css
+++ b/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.css
@@ -24,6 +24,7 @@
     padding: 15px;
     border: 2px solid #fb977860;
     color: #333;
+    text-align: justify;
     background-color: rgba(251, 151, 120, 0.084)
 }
 
