#273 - Prediction view slider is improved
This could be better but I'm lacking in time.

--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.css
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.css
@@ -157,3 +157,11 @@
     display: inline-flex;
     align-items: center;
 }
+
+.slider-label
+{
+    padding-bottom: 6px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%
+}
