--- a/Frontend/src/app/documents/videos/videos.component.html
+++ b/Frontend/src/app/documents/videos/videos.component.html
@@ -16,6 +16,8 @@
 </div>
 
 <div class="content">
+    <div class="explanation-text">In order to presist videos you can use the upload file button, here you can store all videos which are relevant for you as the doctor.</div>
+
     <ag-grid-angular [class]="themeClass" [rowData]="videoService.videos" [columnDefs]="colDefs" domLayout='autoHeight'
         [defaultColDef]="defaultColDef" [pagination]="true" [columnHoverHighlight]="true"
         [autoSizeStrategy]="autoSizeStrategy">
