--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
@@ -29,6 +29,8 @@
 </div> -->
 
 <form (ngSubmit)="predict()" #predictionForm="ngForm" class="m-4 form-predict">
+  <div class="explanation-text">In order to get the prediction results please select the below fields after which you will be capable to use the predict button to get the result of the AI using our custom ML.NET model. Also you will be able to use ChatGPT to get more insights into the parametars.</div>
+
   <div class="d-flex flex-wrap">
     <div class="col-12 col-md-6 col-lg-4 d-flex display-flex flex-wrap justify-content-between">
       <div class="form-group col-12 col-lg-11 custom-form-padding">
