--- a/Frontend/src/app/patient/patient-overview/patient-overview.component.html
+++ b/Frontend/src/app/patient/patient-overview/patient-overview.component.html
@@ -15,6 +15,8 @@
   </div>
   
 <div class="content">
+  <div class="explanation-text">The below view shows you the the patients which are currently available in the system and for which you can execute predictions. Predictions are stored into our database and you are able to see the already executed results by going to the archive.</div>
+
     <ag-grid-angular
       [class]="themeClass"
       [rowData]="patients"
