--- a/Frontend/src/app/contacts/house-doctors/house-doctors.component.html
+++ b/Frontend/src/app/contacts/house-doctors/house-doctors.component.html
@@ -15,6 +15,8 @@
 </div>
 
 <div class="content">
+    <div class="explanation-text">Below are all the house doctors currently in the organization.</div>
+
     <ag-grid-angular [class]="themeClass" [rowData]="houseDoctors" [columnDefs]="colDefs" domLayout='autoHeight'
         [defaultColDef]="defaultColDef" [pagination]="true" [columnHoverHighlight]="true"
         [autoSizeStrategy]="autoSizeStrategy">
