--- a/Frontend/src/app/dashboards/cardiologist-dashboard/cardiologist-dashboard.component.html
+++ b/Frontend/src/app/dashboards/cardiologist-dashboard/cardiologist-dashboard.component.html
@@ -15,6 +15,8 @@
 </div>
 
 <div class="row">
+    <div class="explanation-text">The dashboard shows you insights into some of the most important statistics which are relevant for you as the cardiologist.</div>
+
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Approved appointments per month</h5>
