--- a/Frontend/src/app/dashboards/house-doctor-dashboard/house-doctor-dashboard.component.html
+++ b/Frontend/src/app/dashboards/house-doctor-dashboard/house-doctor-dashboard.component.html
@@ -15,6 +15,8 @@
 </div>
 
 <div class="row">
+    <div class="explanation-text">The dashboard shows you insights into some of the most important statistics which are relevant for you as the house doctor.</div>
+
     <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
         <div class="card">
             <div class="card-body">
