--- a/Frontend/src/app/dashboards/house-doctor-dashboard/house-doctor-dashboard.component.html
+++ b/Frontend/src/app/dashboards/house-doctor-dashboard/house-doctor-dashboard.component.html
@@ -40,7 +40,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">
-                    The ratio of your predictions in percentages</h5>
+                    Critical states prediction ratio</h5>
                 <canvas id="canvas-doughnut"></canvas>
             </div>
         </div>
