--- a/Frontend/src/assets/style.css
+++ b/Frontend/src/assets/style.css
@@ -26955,6 +26955,8 @@ sidebar navigation
 
 .sidebar-nav {
   padding: 15px 0 0 0px;
+  height: calc(100vh - 80px);
+  overflow-y: auto;
 }
 
 .sidebar-nav ul {
